syntax = "proto3";

package chatbot;

import "google/protobuf/timestamp.proto";
import "enum.proto";

message UserContext {
    string user_id = 1;
}

message SendMessageResponse {
    string id = 1;
    string message = 2;
    chatbot_enums.Role role = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message SendMessageRequest {
    string id = 1;
    string message = 2;
    string section_id = 3;
}

message SendCreateSectionRequest {
    string id = 1;
    string name = 2;
}

message SendCreateSectionResponse {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}




